scrollbar fixedx

--- a/src/Components/Home/Footer/Footer.css
+++ b/src/Components/Home/Footer/Footer.css
@@ -3,6 +3,7 @@
   font-size: 1.5rem;
   padding-top: 2rem;
   padding-bottom: 2rem;
+  width: 100vw;
 }
 
 .footer__top {
@@ -29,7 +30,6 @@
 input[type="text"] {
   flex-grow: 1;
   border: none;
-  
 }
 
 input[type="text"]:focus {
@@ -70,8 +70,7 @@ input[type="submit"] {
   margin-bottom: 0.4rem;
 }
 
-.social-icon{
-
+.social-icon {
   height: 2.5rem;
   margin-left: 1rem;
 }
