--- a/src/Components/Home/Header/Header.css
+++ b/src/Components/Home/Header/Header.css
@@ -4,6 +4,7 @@ nav {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  width: 100vw;
 }
 .logo {
   height: 8rem;
